# ITMO_LABS

./: README.md
ArgParser/lib/: ArgParser.cpp  ArgParser.h
CircularBuffer/: CMakeLists.txt
CircularBuffer/lib/: CBIteraror.cpp  CBIteraror.h  CMakeLists.txt  CircularBuffer.h
CircularBuffer/tests/: CMakeLists.txt  CircularBufferTests.cpp
HammingArchiver/: CMakeLists.txt
HammingArchiver/lib/: CMakeLists.txt  Coding.cpp  Coding.h  FileInfo.cpp  FileInfo.h  HAFfiles.cpp  HAFfiles.h  Parser.cpp  Parser.h
MemoryPoolsAllocator/: CMakeLists.txt
MemoryPoolsAllocator/lib/: CMakeLists.txt  PoolAllocator.h
Mp3MetaInfoParser/: CMakeLists.txt
Mp3MetaInfoParser/docs/: id3v2.4.0-frames.rst
Mp3MetaInfoParser/lib/: CMakeLists.txt  Header.cpp  Header.h  Mp3.cpp  Mp3.h  frames.cpp  frames.h
OMFL/lib/: CMakeLists.txt  parser.cpp  parser.h  section.cpp  section.h
OMFL/tests/: test_format.cpp  test_parser.cpp
STLAlgorithm/: CmakeLists.txt
STLAlgorithm/lib/: CmakeLists.txt  my_algorithms.h
STLAlgorithm/tests/: AlgoTests.cpp  CmakeLists.txt
SandPileModel/: CMakeLists.txt
SandPileModel/lib/: BMPImage.cpp  BMPImage.h  CMakeLists.txt  parser.cpp  parser.h  sandpile.cpp  sandpile.h
Uint2022_t/: CMakeLists.txt
Uint2022_t/lib/: number.cpp  number.h
WeatherForecast/: CMakeLists.txt
WeatherForecast/lib/: CMakeLists.txt  Config.cpp  Config.h  Weather.cpp  Weather.h  forecast.cpp  forecast.h
WordCounter/: CMakeLists.txt  WordCount.cpp
